--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,6 +6,7 @@
     "serve": "vite preview"
   },
   "dependencies": {
+    "@heroicons/vue": "^1.0.2",
     "axios": "^0.21.1",
     "vue": "^3.0.5",
     "vue-router": "^4.0.10",
