implementação da Dashboard

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "axios": "^0.21.1",
     "vue": "^3.0.5",
     "vue-router": "^4.0.10",
+    "vuedraggable": "^4.0.3",
     "vuex": "^4.0.2"
   },
   "devDependencies": {
