--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "@heroicons/vue": "^1.0.2",
     "axios": "^0.21.1",
+    "click-outside-vue3": "^4.0.1",
     "vue": "^3.0.5",
     "vue-router": "^4.0.10",
     "vuedraggable": "^4.0.3",
